--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@ Your Fee would be: <br/><div class="number">$<span id="fee" name="fee"/></div><b
 </form>
 <script>calc()</script>
 
-<div style="width:100;"><div style="width:50%; margin:50px auto 0 auto;">Created by Dan Herr</div>
+<div style="width:100%;"><div style="width:50%; margin:50px auto 0 auto;">Created by Dan Herr
 <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-<script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/danielherr" data-format="inline" data-related="false"></script></div>
+<script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/danielherr" data-format="inline" data-related="false"></script></div></div>
 
 
 <!-- This works with other JS Code
