fix quotes and make Div
Dealing with issues around the text at the bottom.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Your Fee would be: <br/><div class="number">$<span id="fee" name="fee"/></div><b
 </form>
 <script>calc()</script>
 
-<div style="width:100%;"><p style="width: 25%; margin:5px auto 0px auto; font: 8px "Helvetica Neue", Helvetica, Arial, sans-serif; font-weight:bold; text-align:center;">Created by <a href="https://twitter.com/DanHerr" title="@DanHerr on Twitter">@DanHerr</a><br/><a href="http://www.danherr.com/" title="More about Dan Herr on his personal website">DanHerr.com</a></p><div style="width:50%; margin:50px auto 0 auto;">
+<div style="width:100%;"><div style="width: 25%; margin:5px auto 0px auto; font: 8px 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight:bold; text-align:center;">Created by <a href="https://twitter.com/DanHerr" title="@DanHerr on Twitter">@DanHerr</a><br/><a href="http://www.danherr.com/" title="More about Dan Herr on his personal website">DanHerr.com</a></div><div style="width:50%; margin:50px auto 0 auto;">
 	<!--This script is not playing well -->
 	<!--
 	<script src="//platform.linkedin.com/in.js" type="text/javascript"></script><script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/danielherr" data-format="inline" data-related="false"></script>
