--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@ Lehman Type:</span><select id="lehman" name="lehman">
 </label>
 <div id="Results">
 <div id="TEVarea">With a TEV of:<br/>
-<div class="number">$<span id="tev" name="tev"/> million</div>
+<div class="number">$<span id="tev" name="tev"> </span>million</div>
 </div>
 <div id="FEEarea">
-Your Fee would be: <br/><div class="number">$<span id="fee" name="fee"/></div><br/>
+Your Fee would be: <br/><div class="number">$<span id="fee" name="fee"> </span></div><br/>
 </div>
 </div>
 </form>
