--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@ Your Fee would be: <br/><div class="number">$<span id="fee" name="fee"> </span><
 </form>
 <script>calc()</script>
 
+<!-- This is the section for the chart -->
+  <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+  <div id="chart_div"></div>
+  
+  
+  <!-- end Chart -->
+
 <div style="width:100%;"><div class="DHref"><a href="http://www.danherr.com" title="More about Dan Herr @ DanHerr.com"></a><img src="https://s.gravatar.com/avatar/18ea7e1919fa398e2f2bd3ccb1e15b4d?s=80" alt="Profile Image of Dan Herr" title="Investment Banker Daniel S. Herr" style="margin: auto;"/></a><br/>Created by <a href="https://twitter.com/DanHerr" title="@DanHerr on Twitter">@DanHerr</a><br/><a href="http://www.danherr.com/" title="More about Dan Herr on his personal website">DanHerr.com</a></div><div style="width:50%; margin:50px auto 0 auto;">
 	<!--This script is not playing well -->
 	<!--
