--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   ga('send', 'pageview');
 
 </script>
+<!--for charts-->
+  <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+  <!--end for chartd -->
 </head>
 <body>
 <form class="bootstrap-frm">
