--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ The total you will receive is:
 <span id="result"></span>
 </p>
 -->
-<div style="position:absolute; bottom: 20px;">Check out the <a href="https://jsfiddle.net/DanHerr/ps4u3L2d/12/embedded/result/" title="New experimental Beta version of Lehman Fee Calculator">Experimental Version 0.2 of Lehman Fee Calculator</a></div>
+<div style="position:absolute; bottom: 20px; width:50%; font: grey 8px "Helvetica Neue", Helvetica, Arial, sans-serif; margin: auto;">Check out the <a href="https://jsfiddle.net/DanHerr/ps4u3L2d/12/embedded/result/" title="New experimental Beta version of Lehman Fee Calculator">Experimental Version 0.2 of Lehman Fee Calculator</a></div>
 </body>
 <footer>
 </footer>
