--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ The total you will receive is:
 <span id="result"></span>
 </p>
 -->
-<div class="bottomRef">Check out the <a href="https://jsfiddle.net/DanHerr/ps4u3L2d/12/embedded/result/" title="New experimental Beta version of Lehman Fee Calculator">Experimental Version 0.2 of Lehman Fee Calculator</a></div>
+<div class="bottomRef"><p style="color:grey">Check out the <a href="https://jsfiddle.net/DanHerr/ps4u3L2d/12/embedded/result/" title="New experimental Beta version of Lehman Fee Calculator">Experimental Version 0.2 of Lehman Fee Calculator</a></p></div>
 </body>
 <footer>
 </footer>
