--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Your Fee would be: <br/><div class="number">$<span id="fee" name="fee"> </span><
   
   <!-- end Chart -->
 
-<div style="width:100%;"><div class="DHref"><a href="http://www.danherr.com" title="More about Dan Herr @ DanHerr.com"></a><img src="https://s.gravatar.com/avatar/18ea7e1919fa398e2f2bd3ccb1e15b4d?s=80" alt="Profile Image of Dan Herr" title="Investment Banker Daniel S. Herr" style="margin: auto;"/></a><br/>Created by <a href="https://twitter.com/DanHerr" title="@DanHerr on Twitter">@DanHerr</a><br/><a href="http://www.danherr.com/" title="More about Dan Herr on his personal website">DanHerr.com</a></div><div style="width:50%; margin:50px auto 0 auto;">
+<div style="width:100%;"><div class="DHref"><a href="http://www.danherr.com" title="More about Dan Herr @ DanHerr.com"><img src="https://s.gravatar.com/avatar/18ea7e1919fa398e2f2bd3ccb1e15b4d?s=80" alt="Profile Image of Dan Herr" title="Investment Banker Daniel S. Herr" style="margin: auto;"/></a><br/>Created by <a href="https://twitter.com/DanHerr" title="@DanHerr on Twitter">@DanHerr</a><br/><a href="http://www.danherr.com/" title="More about Dan Herr on his personal website">DanHerr.com</a></div><div style="width:50%; margin:50px auto 0 auto;">
 	<!--This script is not playing well -->
 	<!--
 	<script src="//platform.linkedin.com/in.js" type="text/javascript"></script><script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/danielherr" data-format="inline" data-related="false"></script>
@@ -74,7 +74,7 @@ The total you will receive is:
 <span id="result"></span>
 </p>
 -->
-<div class="bottomRef"><p style="color:grey">Check out the <a href="https://jsfiddle.net/DanHerr/ps4u3L2d/12/embedded/result/" title="New experimental Beta version of Lehman Fee Calculator">Experimental Version 0.2 of Lehman Fee Calculator</a></p></div>
+<div style="width:100%;"><div class="bottomRef"><p style="color:grey">Check out the <a href="https://jsfiddle.net/DanHerr/ps4u3L2d/12/embedded/result/" title="New experimental Beta version of Lehman Fee Calculator">Experimental Version 0.2 of Lehman Fee Calculator</a></p></div></div>
 </body>
 <footer>
 </footer>
