add form container

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <!--end for chartd -->
 </head>
 <body>
+<div id="formcontainer">
 <form class="bootstrap-frm">
 <h1>Lehman Fee Calculator
 <span>Please select Single or Double Lehman, fill out the EBITDA and EBITDA Multiple and click Calc Fee to determine your brokerage/referral fee based upon the Lehman Formula (<a href="https://en.wikipedia.org/wiki/Lehman_Formula">Learn more on Wikipedia</a>).</span></h1>
@@ -79,6 +80,7 @@ The total you will receive is:
 </p>
 -->
 <div style="width:100%;"><div class="bottomRef"><p style="color:grey">Check out the <a href="https://jsfiddle.net/DanHerr/ps4u3L2d/12/embedded/result/" title="New experimental Beta version of Lehman Fee Calculator">Experimental Version 0.2 of Lehman Fee Calculator</a></p></div></div>
+</div>
 </body>
 <footer>
 </footer>
