--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Your Fee would be: <br/><div class="number">$<span id="fee" name="fee"> </span><
   
   <!-- end Chart -->
 
-<div style="width:100%;"><div class="DHref1">The other ways to remember the calculation / keep it simple in your head is:
+<div style="width:100%;"><div class="DHref1">The other ways to remember the calculation / keep it simple in your head are:
 <ul><li>$150k for first $5m TEV + 1% of the balance; OR</li>
 <li>$200k for the first $10m TEV + 1% of the balance</li></ul>
 
