--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Lehman Type:</span><select id="lehman" name="lehman" onchange="calc()">
    </select>
    </label>
    <label>
-    <span>EBITDA: $</span><input type="text" id="ebitda" name="ebitda" value="3" onchange="calc()"/>million
+    <span>EBITDA: $</span><input type="text" id="ebitda" name="ebitda" value="3" onchange="calc()"/>mil
     </label>
     <label>
     <span>EBITDA Multiple: </span>
